# CRISPR_exclusive_stagger

./: .gitignore  LICENSE  README.md  heatmap_cleavage_pattern.R  main.py  pyproject.toml
data/: cluster_result_by_dominantbp_ispymac.csv  cluster_result_by_dominantbp_spycas9.csv  cluster_result_by_dominantbp_spymac.csv
src/ces/: __init__.py  __main__.py  utils.py
