[project]
name = "ces"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ljw20180420", email = "ljw2017@sjtu.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotnine>=0.15.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]

[project.scripts]
ces = "ces:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
